Added text highlighting to search results

--- a/src/jquery.bootgrid.less
+++ b/src/jquery.bootgrid.less
@@ -54,7 +54,7 @@
     text-align: right;
 
     .btn-group > .btn-group
-    { 
+    {
         .dropdown-menu
         {
             text-align: left;
@@ -157,4 +157,9 @@
 
         td { .noTurncate(); }
     }
+}
+
+.bootgrid-search-highlight
+{
+  font-weight: bold;
 }
